[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/Screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/map_picker/MapChoice.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/map_picker/MapPicker.gd" type="Script" id=3]
[ext_resource path="res://main/MenuTheme.tres" type="Theme" id=4]

[node name="MapPicker" instance=ExtResource( 1 )]
script = ExtResource( 3 )
is_idle_screen = false

[node name="ColorRect" type="ColorRect" parent="." index="0"]
margin_right = 256.0
margin_bottom = 256.0
color = Color( 0.670588, 0.321569, 0.211765, 1 )

[node name="StartPrompt" parent="." index="3"]
visible = false

[node name="MapChoice1" parent="." index="4" instance=ExtResource( 2 )]
position = Vector2( 33, 32 )

[node name="MapChoice2" parent="." index="5" instance=ExtResource( 2 )]
position = Vector2( 112, 32 )
map_name = "Cave"

[node name="MapChoice3" parent="." index="6" instance=ExtResource( 2 )]
position = Vector2( 192, 32 )
map_name = "Plains"

[node name="MapChoice4" parent="." index="7" instance=ExtResource( 2 )]
position = Vector2( 32, 112 )
map_name = "Mountain"

[node name="MapChoice5" parent="." index="8" instance=ExtResource( 2 )]
position = Vector2( 112, 112 )
map_name = "Random"

[node name="MapChoice6" parent="." index="9" instance=ExtResource( 2 )]
position = Vector2( 192, 112 )
map_name = "Desert"

[node name="MapChoice7" parent="." index="10" instance=ExtResource( 2 )]
position = Vector2( 33, 200 )
map_name = "Shelf"

[node name="MapChoice8" parent="." index="11" instance=ExtResource( 2 )]
position = Vector2( 112, 200 )
map_name = "Sky"

[node name="MapChoice9" parent="." index="12" instance=ExtResource( 2 )]
position = Vector2( 192, 200 )
map_name = "Jungle"

[node name="PlayerChoice" type="Label" parent="." index="13"]
margin_left = 80.0
margin_right = 168.0
margin_bottom = 16.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.92549, 0.152941, 1 )
text = "Player 1 chooses"
align = 1
valign = 1

[node name="Countdown" type="Label" parent="." index="14"]
margin_left = 88.0
margin_top = 240.0
margin_right = 168.0
margin_bottom = 254.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.894118, 0.211765, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "seconds"
align = 1
valign = 1
